:pull-request-url: {project-url}/pull

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/[Keep a Changelog], and this
project adheres to https://semver.org/[Semantic Versioning].

== {compare-url}/v0.7.13\...HEAD[Unreleased]

=== Changed

* Split `exit_code.rs` into submodules ({pull-request-url}/87[#87])

== {compare-url}/v0.7.12\...v0.7.13[0.7.13] - 2024-04-16

=== Added

* Add link to `true` ({pull-request-url}/84[#84])

== {compare-url}/v0.7.11\...v0.7.12[0.7.12] - 2024-04-08

=== Changed

* Change position of `package.metadata.docs.rs`

== {compare-url}/v0.7.10\...v0.7.11[0.7.11] - 2024-01-18

=== Changed

* Change copyright notice in `LICENSES/MIT.txt`

== {compare-url}/v0.7.9\...v0.7.10[0.7.10] - 2024-01-06

=== Changed

* Update doctests ({pull-request-url}/72[#72])

== {compare-url}/v0.7.8\...v0.7.9[0.7.9] - 2024-01-06 [YANKED]

=== Changed

* Update doctests ({pull-request-url}/71[#71])

== {compare-url}/v0.7.7\...v0.7.8[0.7.8] - 2024-01-05

=== Fixed

* Fix clippy warnings for examples ({pull-request-url}/70[#70])

== {compare-url}/v0.7.6\...v0.7.7[0.7.7] - 2023-12-07

=== Changed

* Reduce package size

== {compare-url}/v0.7.5\...v0.7.6[0.7.6] - 2023-11-30

=== Removed

* Remove DEP5 file ({pull-request-url}/65[#65])

== {compare-url}/v0.7.4\...v0.7.5[0.7.5] - 2023-11-04

=== Added

* Add Code of Conduct ({pull-request-url}/60[#60])

== {compare-url}/v0.7.3\...v0.7.4[0.7.4] - 2023-10-03

=== Added

* Add conversion to `i8`, `i16`, `i64`, `i128`, `isize`, `u16`, `u64`, `u128`
  and `usize` ({pull-request-url}/56[#56])

== {compare-url}/v0.7.2\...v0.7.3[0.7.3] - 2023-10-01

=== Changed

* Extend `io::ErrorKind` conversion to support variants available in the
  nightly ({pull-request-url}/52[#52])

== {compare-url}/v0.7.1\...v0.7.2[0.7.2] - 2023-09-07

=== Changed

* Change to use a list of copyright holders in copyright notice
  ({pull-request-url}/46[#46])
