@@ -19,6 +19,7 @@ project adheres to https://semver.org/[Semantic Versioning].
 === Changed
 
 * Split `exit_code.rs` into submodules ({pull-request-url}/87[#87])
+* Make `Result` type always available ({pull-request-url}/89[#89])
 
 == {compare-url}/v0.7.12\...v0.7.13[0.7.13] - 2024-04-16
 
